--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "5.0.0",
     "font-awesome": "4.7.0",
+    "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
